--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,21 +24,22 @@ repos:
 #        language_version: python3.8
 #        args: ["--convention=google"]
   - repo: https://github.com/PyCQA/isort
-    rev: 5.10.1
+    rev: 5.12.0
     hooks:
       - id: isort
         name: Format imports
         files: ^classy/
         args: ["--profile", "black"]
   - repo: https://github.com/psf/black
-    rev: 22.6.0
+    rev: 23.1.0
     hooks:
       - id: black
         name: Format code
         files: ^classy/
-  - repo: https://github.com/asottile/blacken-docs
+  - repo: https://github.com/adamchainz/blacken-docs
     rev: v1.12.1
     hooks:
       - id: blacken-docs
         name: Format code in docs
-        additional_dependencies: [ black==21.12b0 ]
+        additional_dependencies:
+          - black==23.1.0
