--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,19 @@
 torch>=1.9
-pytorch-lightning>=1.5.0,<1.6.0
+pytorch-lightning>=1.9.0,<2.0.0
 torchmetrics>=0.5.0,<0.8.0
+hydra-core>=1.3.0
+# huggingface libraries
 transformers>=4.1,<5.0
-hydra-core==1.1.1
+evaluate==0.4.0
 # argcomplete
 argcomplete==1.12.3
 # logging
 wandb>=0.12.0
 # data and metrics
-datasets>=1.12,<1.19
 nltk>=3.4.5,<4.0.0
-seqeval==1.2.*  # required by span callback
-rouge-score==0.0.4  # required by rouge callback
-sacrebleu==2.0.0  # required by sacrebleu callback
+seqeval>=1.2.2  # required by span callback
+rouge-score>=0.0.4  # required by rouge callback
+sacrebleu>=2.0.0  # required by sacrebleu callback
 # extra
 rich>=11.0.0
 sentencepiece==0.1.96  # required by unigram tokenizers (mbart)
