--- a/src/classy_configurations/generation.yaml
+++ b/src/classy_configurations/generation.yaml
@@ -1,17 +1,19 @@
-task: qa
+task: generation
 project_name: classy
 exp_name: null
 exp_folder: ./experiments/${exp_name}
 
-transformer_model: "bert-base-cased"
+transformer_model: "facebook/bart-base"
 
-callbacks_monitor: 'val_accuracy'
-callbacks_mode: 'max'
+callbacks_monitor: 'val_loss'
+callbacks_mode: 'min'
 
 hydra:
   # customize working dir
   run:
     dir: ./experiments/${exp_name}/${now:%Y-%m-%d}/${now:%H-%M-%S}
+  job:
+    chdir: True
   job_logging:
     formatters:
       simple:
@@ -22,9 +24,9 @@ hydra:
 # defaults
 defaults:
   - callbacks: empty
-  - data: qa
-  - evaluation: qa
-  - model: qa
+  - data: generation
+  - evaluation: generation
+  - model: generation
   - prediction: default
   - training: default
   - logging: default
