--- a/src/classy_configurations/token.yaml
+++ b/src/classy_configurations/token.yaml
@@ -1,9 +1,9 @@
-task: sequence
+task: token
 project_name: classy
 exp_name: null
 exp_folder: ./experiments/${exp_name}
 
-transformer_model: "bert-large-cased"
+transformer_model: "bert-base-cased"
 
 callbacks_monitor: 'val_micro-f1-score'
 callbacks_mode: 'max'
@@ -12,6 +12,8 @@ hydra:
   # customize working dir
   run:
     dir: ./experiments/${exp_name}/${now:%Y-%m-%d}/${now:%H-%M-%S}
+  job:
+    chdir: True
   job_logging:
     formatters:
       simple:
@@ -22,9 +24,9 @@ hydra:
 # defaults
 defaults:
   - callbacks: empty
-  - data: sequence
-  - evaluation: sequence
-  - model: sequence
+  - data: token
+  - evaluation: token
+  - model: token
   - prediction: default
   - training: default
   - logging: default
